<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpeedFaster</string>
    <string name="menu_item_toggle_global">Toggle global mode</string>
    <string name="menu_item_switch">Proxy</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="config_url">Config URL</string>
    <string name="config_not_set_value">Not set</string>
    <string name="config_url_scan">Scan an QR code</string>
    <string name="config_url_manual">Type manually</string>
    <string name="config_url_scan_hint">Scan the QR code of your config url</string>
    <string name="select_app">Select App</string>
    <string name="select_app_detail">No</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More&#8230;</string>已断开
    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="about_info">Shadowsocks-android is writen by dawei. It could run on any Android 4.0+ device , no need to root, and it is modified based on SmartProxy and Shadowsocks-Java</string>
    <string name="exit_confirm_info">This will disconnect the VPN connection, Are you sure to exit?</string>
    <string name="err_invalid_url">The config URL is invalid.</string>
    <string name="config_url_hint">ss://method:password@host:port</string>
    <string name="pass_digits">abcdefghijklmnopqrstuvwxyz0123456789ABCDEFGHIJKLIMNOPQRSTUVWXYZ?=.</string>

    <string name="bind_email">Bind Email</string>
    <string name="email">email</string>
    <string name="pass">password</string>
    <string name="change_pass">Change Password</string>
    <string name="show">Show</string>
    <string name="new_pass">New Password</string>
    <string name="config_pass">Config Password</string>
    <string name="reset_password">Reset Password</string>

    <string name="go_register">Register>></string>
    <string name="two_pass">Enter your password again</string>
    <string name="switch_account">Switch Account</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="score">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="service_terms">Terms of Service</string>
    <string name="account">account</string>
    <string name="point">Tips: An account can only bind 2 devices</string>
    <string name="login_register">login / register</string>
    <string name="one_login">First login gift time</string>
    <string name="or">or</string>
    <string name="tourist_mode">Tourist Mode</string>
    <string name="old_pass">old pass:</string>
    <string name="common_problem">Common Problem</string>
    <string name="problem1">Why canot I connect ?</string>
    <string name="answer1">1.Please check if the current mobile phone network is unblocked and the wireless signal is stable. Try switching between WIFI and 4G signals.</string>
    <string name="answer2">2.Different network operators have different service line stability and speed. You can disconnect the VPN and try to reconnect.</string>
    <string name="answer3">3.You can restart your WIFI or 4G and try to reconnect.</string>
    <string name="answer4">4.The recommended width is greater than 4M, otherwise the speed may not be ideal.</string>
    <string name="problem2">Need to deduct mobile phone traffic?</string>
    <string name="answer21">VPN is only a proxy. If you use VPN on 3G/4G, the traffic fee is charged by the operator and has nothing to do with VPN.</string>
    <string name="problem3">Can VPN break through the broadband speed of the home?</string>
    <string name="answer31">No, VPN is equivalent to a foreign agent, and the speed cannot break the broadband speed of the home.</string>
    <string name="problem4">How to change account?</string>
    <string name="answer41">Click "My" in the lower left corner of the main interface to enter the user center, click on the bound mailbox, you can modify the account according to the prompts.</string>
    <string name="problem5">How to change your password?</string>
    <string name="answer51">Click "My" in the lower left corner of the main interface to enter the User Center, click Change Password, you can change the password according to the prompt. , The password can only be changed after the account has been modified to become a mailbox.</string>

    <string name="title_country">Country</string>
    <string name="title_help">Help</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_set">Set</string>
    <string name="title_web">Web</string>

    <string name="dialog_point">Tips</string>
    <string name="dialog_expire_vip">Your vip has expired</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_experience">Experience</string>
    <string name="dialog_new_version">Discover new version</string>
    <string name="dialog_new_version2">The latest version</string>
    <string name="dialog_version_content">Update Content</string>
    <string name="dialog_now_version">Update </string>

    <string name="FILD">Network request error</string>
    <string name="FILD_NULL">Unknown network error</string>
    <string name="HOST_NULL">Domain name resolution error</string>
    <string name="LOADING">loading...</string>
    <string name="EAMIL_NULL">Please input your email</string>
    <string name="PASS_NULL">Please enter your password</string>
    <string name="ACCOUNT_NULL">Please input Username</string>
    <string name="NEW_PASS_FORMATEL">The new password format is incorrect.</string>
    <string name="ENTER_NEW_PASS">Please enter a new password</string>
    <string name="PASS_FORMATEL">The password is incorrectly formatted.</string>
    <string name="ENTER__CONFIRM_PASS">Please enter a confirmation password</string>
    <string name="TWO_NO_IDENTICAL">Inconsistent input password</string>
    <string name="Successfully_modified">Successfully modified</string>
    <string name="Successfully_login">Successfully login</string>
    <string name="Press_again">Press again to exit the SpeedFaster</string>
    <string name="Storage">Storage space permissions</string>
    <string name="Device_Information">Device information permission</string>
    <string name="Device_Information_Detail">We need device information to make it easier for you to use.</string>
    <string name="Storage_Detail">We need to read and write memory card permissions so that we can temporarily save some data.</string>
    <string name="Google_Store">Please check if Google App Market is installed</string>
    <string name="QQ">Please check if QQ is installed or is it the latest version.</string>
    <string name="UPDATE_FAIL">Update Failed</string>
    <string name="DOWNLOADING">downloading</string>
    <string name="PLEASE_WAIT">Please wait...</string>
    <string name="DIALOG_TIPS">Tips</string>
    <string name="DIALOG_NO_NET">Found that you have not turned on the network, please turn it on.</string>
    <string name="DIALOG_CANCEL">Cancel</string>
    <string name="DIALOG_PLEASE_OPEN_NET">Please turn on the network, otherwise it will affect your normal use!</string>
    <string name="DIALOG_OPEN_NET">Open</string>
    <string name="DIALOG_VERSION_CONTENT">More stable, faster and more efficient!</string>
    <string name="PRIVACY_SERVICE">Privacy Service</string>
    <string name="TERMS_SERVICE">Terms Service</string>

    <string name="SSL_VER">Ssl certificate verification failed</string>
    <string name="GO_ON">go on</string>
    <string name="CANCEL">cancel</string>
    <string name="ZHIFUBAO_FAIL">The third-party app you opened is not installed.</string>
</resources>
