<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:scaleType="centerCrop">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="15dp"
                android:padding="5dp"
                android:src="@drawable/close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_pass"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/old_pass"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_oldpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_old"
                android:gravity="center_vertical"
                android:text="******"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_show"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_loginselect"
                android:text="@string/show"
                android:textColor="#fff" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/et_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border"
                android:digits="@string/pass_digits"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_config_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border"
                android:digits="@string/pass_digits"
                android:hint="@string/config_pass"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/map"
            android:orientation="vertical"
            android:scaleType="centerCrop">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/btn_loginselect"
                android:text="@string/reset_password"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>